# crewai_ollama_langchain

./: .gitignore  README.md
crewai-advanced-example/: .env  agents.py  main.py  pyproject.toml  tasks.py
crewai-advanced-example/tools/: calculator_tools.py  search_tools.py  sec_tools.py
crewai_simple_example/: README.md  main.py  pyproject.toml
setup/: Llama2Modelfile  MistralModelfile  create_llama2_modelfile.sh  create_mistral_modelfile.sh
